--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -53,8 +53,35 @@
         </div>
     </header>
 
+    <main>
+        <div class="sobrenosotros-main">
+            <p>Establecida en 2025 en la ciudad de La Plata, Kazeover es una marca de ropa oversize de minorista y mayorista especializado que ofrece colecciones de temporada de ropa, accesorios y calzado para hombres, mujeres y niños a través de una lente distinta de narración personal. Kazeover encarna un estilo de vida multifacético, con detalles sin concesiones en la fabricación y el diseño. Dirigida por el fundador, CEO y director creativo Lucas Colonio, la marca es conocida localmente por evocar la desde un punto de vista dinámico y trabajar en estrecha colaboración con un conjunto cuidadosamente seleccionado de los mejores colaboradores de su clase.
+            <p>
+                Kazeover, concebido a partir del amor infantil de Fieg por los cereales, opera en 14 ubicaciones y
+                tiene un espacio independiente. El brazo de alimentos y bebidas de Kith se expandió en 2022 y, junto con
+                Major Food Group, Sadelle's at Kith abrió en Kith Paris y luego en Kith Miami Design District, Kith
+                Toronto y Kith Seoul.
 
-<!-- FOOTER DE INDEX -->
+            </p>
+
+            <p>
+                La Fundación Kinnect, establecida y operada por Kith, es una organización sin fines de lucro dedicada a
+                crear un cambio positivo a través de la educación, la comunidad y el impacto social.
+            </p>
+
+            <p>
+                Ubicaciones de las tiendas: La plata, Berriso, Villa Elisa, City Bell, Los Hornos, Tolosa, Ringuelet.
+            </p>
+        </div>
+        </p>
+
+        <div class="d-flex">
+            <div><img class="w-100" src="../img/tiendakazeover.png" alt=""></div>
+            <div> <img class="w-100" src="../img/remeraoversize-kazeocer.png" alt=""></div>
+        </div>
+    </main>
+
+    <!-- FOOTER DE INDEX -->
 
 
     <footer class=" text-start w-100 footer-index">
@@ -102,4 +129,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
