--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- HEADER DE MUJER -->
-   <header class="mujer-header">
+    <header class="mujer-header">
         <div class="index-header-flex  ">
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
@@ -40,6 +40,9 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
@@ -52,7 +55,7 @@
         </div>
     </header>
 
-<!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
     <main>
         <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">MUJER</h2>
 
@@ -64,7 +67,7 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class=" card-img w-100" src="../img/oversizemujer1.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -82,7 +85,7 @@
             <!-- SEGUNDA CARD -->
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index3.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/oversizemujer2.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -100,7 +103,7 @@
             <!-- TERCERA CARD -->
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class="card-img w-100" src="../img/carrusel1index.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/oversizemujer3.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -118,7 +121,7 @@
             <!-- CUARTA CARD -->
             <div class="w-50 img-card  h-100  p-1">
                 <div>
-                    <img class="card-img w-100" src="../img/carussel3index.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/oversizemujer4.jpg" alt="remeranegra">
                 </div>
 
                 <div class=" card-info m-3">
@@ -135,7 +138,7 @@
             <!-- 6ta CARD -->
             <div class="w-50 img-card  p-1">
                 <div>
-                    <img class=" card-img w-100" src="../img/card-oversize-index6.jpg" alt="remeranegra">
+                    <img class=" card-img w-100" src="../img/oversizemujer5.jpg" alt="remeranegra">
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
@@ -151,7 +154,7 @@
             <!-- 7ta CARD -->
             <div class="w-50 img-card  p-1">
                 <div>
-                    <img class=" card-img w-100" src="../img/carrusel5index.jpg" alt="remeranegra">
+                    <img class=" card-img w-100" src="../img/oversizemujer6.jpg" alt="remeranegra">
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
@@ -168,7 +171,7 @@
             <!-- 8ta CARD -->
             <div class="p-1 img-card">
                 <div>
-                    <img class="card-img w-100" src="../img/carrusel2index.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/oversizemujer7.jpg" alt="remeranegra">
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
@@ -181,99 +184,14 @@
                     <p><span>$ 30</span></p>
                 </div>
             </div>
-            <!-- 9ta CARD -->
-            <div class=" img-card  p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index1.jpg" alt="remeranegra">
-                </div>
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">1Million People</h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
+           
 
 
     </main>
 
 
     <!-- FOOTER DE MUJER -->
-     <footer class=" text-start w-100 footer-index">
+    <footer class=" text-start w-100 footer-index">
 
         <div class="footer-conteiner-grid ">
             <div class="div1 py-5">
@@ -290,9 +208,7 @@
         <div class="m-0 p-0">
             <div>
                 <div class="d-flex row ">
-                    <ul class="d-flex">
-                        <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
-                    </ul>
+
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
                             <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
@@ -301,9 +217,10 @@
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
-                        <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
-
+                    <ul class="d-flex">
+                        <li>Copyright ©. Todos los derechos reservados.</li>
+                    </ul>
 
                 </div>
             </div>
