--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -41,6 +41,9 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
@@ -75,9 +78,9 @@
         </div>
         </p>
 
-        <div class="d-flex">
-            <div><img class="w-100" src="../img/tiendakazeover.png" alt=""></div>
-            <div> <img class="w-100" src="../img/remeraoversize-kazeocer.png" alt=""></div>
+        <div class="d-flex  gap-2">
+            <div ><img class="h-100 w-100" src="../img/tiendakazeover.png" alt=""></div>
+            <div><img class="h-100 w-100" src="../img/remeraoversize-kazeocer.png" alt=""></div>
         </div>
     </main>
 
