--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -41,7 +41,7 @@
                                 <a class="nav-link" href="./mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/niños.html">Niños</a>
+                                <a class="nav-link" href="./niños.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./accesorios.html">Acessorios</a>
