--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -72,13 +72,13 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Buzo Oversize Marrón Estilo Streetwear </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
 
@@ -90,13 +90,13 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Ame la Nuit</h3>
+                        <h3 class="fs-6">Drew Amarilla Estilo Streetwear</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
 
@@ -108,13 +108,13 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Blessed Angel</h3>
+                        <h3 class="fs-6">Estilo College</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
 
@@ -126,13 +126,13 @@
 
                 <div class=" card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Tokyo Forest</h3>
+                        <h3 class="fs-6">Estilo Jersey Americano </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
             <!-- 6ta CARD -->
@@ -142,13 +142,13 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">New York Yankees</h3>
+                        <h3 class="fs-6">Chicago 25</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
             <!-- 7ta CARD -->
@@ -158,13 +158,13 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Grow the Game</h3>
+                        <h3 class="fs-6">New York U.S.A</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
 
@@ -175,13 +175,13 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Wise Moves</h3>
+                        <h3 class="fs-6">California West Coast</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 29.99</span></p>
                 </div>
             </div>
            
