--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -79,8 +79,8 @@
         </p>
 
         <div class="d-flex  gap-2">
-            <div ><img class="h-100 w-100" src="../img/tiendakazeover.png" alt=""></div>
-            <div><img class="h-100 w-100" src="../img/remeraoversize-kazeocer.png" alt=""></div>
+            <div><img class="img-sobrenosotros" src="../img/tiendakazeover.png" alt=""></div>
+            <div><img class="img-sobrenosotros" src="../img/remeraoversize-kazeocer.png" alt=""></div>
         </div>
     </main>
 
