--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -57,7 +57,7 @@
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
     <main>
-        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">HOMBRES</h2>
+        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">HOMBRE</h2>
 
 
         <!-- Contenedor de los productos -->
@@ -74,7 +74,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
@@ -92,7 +92,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Ame la Nuit</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
@@ -110,7 +110,8 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Blessed Angel</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
+
                         </div>
 
                     </div>
@@ -128,11 +129,11 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Tokyo Forest</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 30 </span></p>
                 </div>
             </div>
             <!-- 6ta CARD -->
@@ -144,7 +145,8 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">New York Yankees</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
+                            
                         </div>
 
                     </div>
@@ -160,7 +162,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Grow the Game</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
@@ -177,7 +179,7 @@
                     <div class="d-flex justify-content-between">
                         <h3 class="fs-6">Wise Moves</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
@@ -193,7 +195,7 @@
                     <div class="d-flex flex-nowrap  justify-content-between">
                         <h3 class="fs-6">1Million People</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
@@ -202,71 +204,71 @@
             </div>
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class=" card-img w-100" src="../img/onepeace.webp" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Mugiwara </h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 30.00</span></p>
                 </div>
             </div>
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/LUNAS.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Lunas</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 19.99</span></p>
                 </div>
             </div>
 
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/M.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">M</h3>
                         <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
                         </div>
 
                     </div>
-                    <p><span>$ 30</span></p>
+                    <p><span>$ 19.99</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/glorius.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Glorious </h3>
+                        <div class="position-relative ">
+                            <img src="../img/corazon.png" alt="corazon" width="20px" height="20px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 19.99</span></p>
                 </div>
             </div>
 
