--- a/pages/niños.html
+++ b/pages/niños.html
@@ -72,7 +72,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Conjunto Oversize Gris Niño – Buzo y Jogger Estilo Urbano con Estampa Barcode </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -90,7 +90,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Ame la Nuit</h3>
+                        <h3 class="fs-6">Conjunto Oversize Niño Arena – Remera y Pantalón Cómodo con Bordado Minimalista</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -108,7 +108,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Blessed Angel</h3>
+                        <h3 class="fs-6">Set Oversize Verde Militar Niño – Estilo Streetwear con Estampa Tipográfica Moderna</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -126,7 +126,7 @@
 
                 <div class=" card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Tokyo Forest</h3>
+                        <h3 class="fs-6">Conjunto Oversize Niño New York Marrón – Remera y Short Street Style Urbano</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">New York Yankees</h3>
+                        <h3 class="fs-6">Set Oversize Niño Los Angeles – Conjunto Beige con Short y Estampa Urbana</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Grow the Game</h3>
+                        <h3 class="fs-6">Conjunto Oversize Niña New York – Remera y Jogger Marrón Chocolate con Estilo Streetwear</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">Wise Moves</h3>
+                        <h3 class="fs-6">Set Infantil Oversize Gris Claro – Buzo Crop y Pantalón Wide Fit para Niña</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">1Million People</h3>
+                        <h3 class="fs-6">Conjunto Niña Oversize Gris Oxford – Estilo Minimalista con Buzo y Pantalón Holgado</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -207,7 +207,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Conjunto Oversize Niña Burgundy – Hoodie “Holiday Club” y Jogger de Algodón </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -224,7 +224,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Set Oversize Niño Brooklyn – Buzo con Capucha Verde Militar y Jogger Estilo Streetwear </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
@@ -242,7 +242,7 @@
 
                 <div class="card-info m-3">
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
+                        <h3 class="fs-6">Conjunto Oversize Niña Lila – Buzo “Studio” y Pantalón Holgado Cómodo</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
                         </div>
