--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -79,8 +79,8 @@
         </p>
 
         <div class="d-flex  gap-2">
-            <div><img class="img-sobrenosotros" src="../img/tiendakazeover.png" alt=""></div>
-            <div><img class="img-sobrenosotros" src="../img/remeraoversize-kazeocer.png" alt=""></div>
+            <div><img class="img-sobrenosotros" src="../img/tiendakazeover.png" alt="tiendanegocio"></div>
+            <div><img class="img-sobrenosotros" src="../img/remeraoversize-kazeocer.png" alt="remeraoversize"></div>
         </div>
     </main>
 
@@ -111,7 +111,7 @@
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
                             <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
                             <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube"></a></li>
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
