--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+<meta name="description" content="KAZEOVER - Tu tienda de moda urbana con estilo único. Descubre nuestra colección de ropa y accesorios para hombre, mujer y niños.">  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>KAZEOVER</title>
@@ -81,11 +81,11 @@
                     <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index" alt=""> </a>
                 </div>
                 <div class="carousel-item">
-                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index" alt="..."></a>
+                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index" alt="remeraoversize"></a>
 
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="...">
+                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="remeraoversize">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -103,7 +103,7 @@
         <div class="div-index-main my-4 ">
 
             <div class="card border border-0 card-index-div">
-                <img src="./img/remeraoversize.jpg" class="card-img-top card-img-index" alt="...">
+                <img src="./img/remeraoversize.jpg" class="card-img-top card-img-index" alt="remeraoversize>
 
                 <div class="card-body">
                     <h2 class="card-text">"M"</h2>
@@ -113,7 +113,7 @@
 
 
             <div class="card border border-0 card-index-div">
-                <img src="./img/collar1.jpg" class="card-img-top card-img-index" alt="...">
+                <img src="./img/collar1.jpg" class="card-img-top card-img-index" alt="collarkazeover">
 
                 <div class="card-body">
                     <h2 class="card-text">"COLLARES"</h2>
@@ -122,7 +122,7 @@
             </div>
             <div class="card  border border-0 card-index-div">
                     <a style="text-decoration: none; color: inherit;" href="./pages/accesorios.html">
-                    <img src="./img/gorras.jpg" class="card-img-top card-img-index" alt="...">
+                    <img src="./img/gorras.jpg" class="card-img-top card-img-index" alt="gorraskazeover">
 
                     <div class="card-body">
                         <h2 class="card-text">GORRAS</h2>
@@ -132,7 +132,7 @@
                 </div>
 
             <div class="card border border-0  card-index-div">
-                <img src="./img/anillos.jpg" class="card-img-top card-img-index" alt="...">
+                <img src="./img/anillos.jpg" class="card-img-top card-img-index" alt="anilloskazeoverzi">
 
                 <div class="card-body ">
                     <h2 class="card-text">ANILLOS</h2>
