--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>KAZEOVER</title>
+    <title>Sobre nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -60,16 +60,8 @@
         <div class="sobrenosotros-main">
             <p>Establecida en 2025 en la ciudad de La Plata, Kazeover es una marca de ropa oversize de minorista y mayorista especializado que ofrece colecciones de temporada de ropa, accesorios y calzado para hombres, mujeres y niños a través de una lente distinta de narración personal. Kazeover encarna un estilo de vida multifacético, con detalles sin concesiones en la fabricación y el diseño. Dirigida por el fundador, CEO y director creativo Lucas Colonio, la marca es conocida localmente por evocar la desde un punto de vista dinámico y trabajar en estrecha colaboración con un conjunto cuidadosamente seleccionado de los mejores colaboradores de su clase.
             <p>
-                Kazeover, concebido a partir del amor infantil de Fieg por los cereales, opera en 14 ubicaciones y
-                tiene un espacio independiente. El brazo de alimentos y bebidas de Kith se expandió en 2022 y, junto con
-                Major Food Group, Sadelle's at Kith abrió en Kith Paris y luego en Kith Miami Design District, Kith
-                Toronto y Kith Seoul.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, hic sequi? Ab quos reiciendis molestias et reprehenderit cupiditate quaerat ullam quia, ea fuga placeat optio quod libero accusamus enim repellendus.
 
-            </p>
-
-            <p>
-                La Fundación Kinnect, establecida y operada por Kith, es una organización sin fines de lucro dedicada a
-                crear un cambio positivo a través de la educación, la comunidad y el impacto social.
             </p>
 
             <p>
