--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>Hombre</title>
+    <title>Ropa oversize de hombre</title>
 </head>
 
 <body>
