--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>MUJER</title>
+    <title>ROPA OVERIZE DE MUJER</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
