--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>MUJER</title>
+    <title>ROPA OVERIZE DE NIÑOS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
