Mejora de index

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -41,7 +41,7 @@
                                 <a class="nav-link" href="./mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./niños.html">Niños</a>
+                                <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./accesorios.html">Acessorios</a>
@@ -168,9 +168,9 @@
                  
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
                             <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube"></a></li>
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
