--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+    <meta name="description" content="Ropa oversize para niños: remeras, buzos y joggers en algodón suave y resistente. Talles 4–16. Cómodo para jugar. Envíos a todo el país.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>ROPA OVERIZE DE NIÑOS</title>
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                                  <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
