--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <meta name="description" content="KAZEOVER - Tu tienda de moda urbana con estilo único. Descubre nuestra colección de ropa y accesorios para hombre, mujer y niños.">  
+    <meta name="description"
+        content="Ropa oversize y streetwear con calce perfecto. Remeras pesadas, hoodies premium y joggers unisex. Envíos a toda Argentina y cambios fáciles.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>KAZEOVER</title>
@@ -16,6 +17,7 @@
 
 <body>
 
+    <!-- HEADER INDEX -->
     <header class="index-header  ">
         <div class="index-header-flex  ">
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
@@ -42,7 +44,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/niños.html">Niños</a>
+                                <a class="nav-link" href="./pages/ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./pages/accesorios.html">Acessorios</a>
@@ -60,7 +62,7 @@
         </div>
     </header>
 
-    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS y ACCESORIOS -->
 
     <main>
         <div class="div-fondo-index-background ">
@@ -78,14 +80,16 @@
             </div>
             <div class="carousel-inner mt-5">
                 <div class="carousel-item active">
-                    <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index" alt=""> </a>
+                    <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index"
+                            alt="Remera-oversize-blessed"> </a>
                 </div>
                 <div class="carousel-item">
-                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index" alt="remeraoversize"></a>
+                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index"
+                            alt="remeraoversize-wise"></a>
 
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="remeraoversize">
+                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="remeraoversize-tokyo">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -102,50 +106,61 @@
 
         <div class="div-index-main my-4 ">
 
-            <div class="card border border-0 card-index-div">
-                <img src="./img/remeraoversize.jpg" class="card-img-top card-img-index" alt="remeraoversize>
+            <a class="link-remera-index "  href="./pages/hombre.html">
+                <div class="card border border-0 card-index-div">
+                    <img src="./img/M.jpg" class="card-img-top card-img-index" alt="collarkazeover">
 
-                <div class="card-body">
-                    <h2 class="card-text">"M"</h2>
-                    <span>COMPRAR</span>
+                    <div class="card-body">
+                        <h2 class="card-text">"M"</h2>
+                        <span>VER MAS</span>
+                    </div>
                 </div>
-            </div>
+            </a>
 
+            <a class="link-remera-index" href="./pages/accesorios.html">
+                <div class="card border border-0 card-index-div">
+                    <img src="./img/collar1.jpg" class="card-img-top card-img-index" alt="collarkazeover">
 
-            <div class="card border border-0 card-index-div">
-                <img src="./img/collar1.jpg" class="card-img-top card-img-index" alt="collarkazeover">
-
-                <div class="card-body">
-                    <h2 class="card-text">"COLLARES"</h2>
-                    <span>VER MAS</span>
+                    <div class="card-body">
+                        <h2 class="card-text">"COLLARES"</h2>
+                        <span>VER MAS</span>
+                    </div>
                 </div>
-            </div>
-            <div class="card  border border-0 card-index-div">
-                    <a style="text-decoration: none; color: inherit;" href="./pages/accesorios.html">
+            </a>
+
+            <a class="link-remera-index " href="./pages/accesorios.html">
+                <div class="card border border-0 card-index-div">
                     <img src="./img/gorras.jpg" class="card-img-top card-img-index" alt="gorraskazeover">
 
                     <div class="card-body">
                         <h2 class="card-text">GORRAS</h2>
                         <span>VER MAS</span>
                     </div>
-                </a>
                 </div>
+            </a>
 
-            <div class="card border border-0  card-index-div">
-                <img src="./img/anillos.jpg" class="card-img-top card-img-index" alt="anilloskazeoverzi">
 
-                <div class="card-body ">
-                    <h2 class="card-text">ANILLOS</h2>
-                    <span>VER MAS</span>
+            <a class="link-remera-index " href="./pages/accesorios.html">
+
+                <div class="card border border-0  card-index-div">
+                    <img src="./img/anillos.jpg" class="card-img-top card-img-index" alt="anilloskazeoverzi">
+
+                    <div class="card-body ">
+                        <h2 class="card-text">ANILLOS</h2>
+                        <span>VER MAS</span>
+                    </div>
                 </div>
-            </div>
+            </a>
+
 
         </div>
 
-
+        <!-- IMAGES POR DEBAJO DEL FLEXBOX MAIN -->
         <div class="d-flex justify-content-center vh-80  ">
-            <div class="w-50 "><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
-            <div class="w-50"><img src="./img/carrusel5index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
+            <div class="w-50 "><img src="./img/carrusel4index.jpg" alt="remeraoversize-M"
+                    class="carrusel-foto-index-main w-100"></div>
+            <div class="w-50"><img src="./img/carrusel5index.jpg" alt="remeraoversize"
+                    class="carrusel-foto-index-main w-100"></div>
         </div>
 
     </main>
@@ -173,7 +188,7 @@
 
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="./img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="./img/logo faceboock.png" alt="Faceboock"></a></li>
                             <li> <a href="#"><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
                             <li> <a href="#"><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
                             <li> <a href="#"><img src="./img/tiktok.png" alt="Tiktok"></a></li>
