--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+    <meta name="description" content="Ropa oversize de hombre: remeras pesadas, hoodies premium y joggers. Talles XS–4XL. Envíos a toda Argentina y primer cambio sin costo.">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="../css/style.css">
@@ -40,7 +41,7 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                                  <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
