--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+    <meta name="description"
+        content="Ropa oversize de mujer: buzos, joggers y remeras premium con calce favorecedor. Talles XS–4XL. Envíos rápidos y cambios simples.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>ROPA OVERIZE DE MUJER</title>
+    <title>ROPA OVERSIZE DE MUJER</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -40,7 +41,7 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                                <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
@@ -184,7 +185,7 @@
                     <p><span>$ 29.99</span></p>
                 </div>
             </div>
-           
+
 
 
     </main>
@@ -211,7 +212,7 @@
 
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
                             <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
                             <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
