--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+    <meta name="description" content="Kazeover es una marca argentina de ropa oversize: calidad, calce real y atención humana. Producción cuidada y envíos a toda Argentina.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>Sobre nosotros</title>
@@ -41,7 +41,7 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/niños.html">Niños</a>
+                                  <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
