--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <meta name="description" content="Kazeover es una marca argentina de ropa oversize: calidad, calce real y atención humana. Producción cuidada y envíos a toda Argentina.">
+    <meta name="description"
+        content="Kazeover es una marca argentina de ropa oversize: calidad, calce real y atención humana. Producción cuidada y envíos a toda Argentina.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>Sobre nosotros</title>
@@ -41,7 +42,7 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                  <a class="nav-link" href="./ninos.html">Niños</a>
+                                <a class="nav-link" href="./ninos.html">Niños</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
@@ -58,19 +59,31 @@
 
     <main>
         <div class="sobrenosotros-main">
-            <p>Establecida en 2025 en la ciudad de La Plata, Kazeover es una marca de ropa oversize de minorista y mayorista especializado que ofrece colecciones de temporada de ropa, accesorios y calzado para hombres, mujeres y niños a través de una lente distinta de narración personal. Kazeover encarna un estilo de vida multifacético, con detalles sin concesiones en la fabricación y el diseño. Dirigida por el fundador, CEO y director creativo Lucas Colonio, la marca es conocida localmente por evocar la desde un punto de vista dinámico y trabajar en estrecha colaboración con un conjunto cuidadosamente seleccionado de los mejores colaboradores de su clase.
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, hic sequi? Ab quos reiciendis molestias et reprehenderit cupiditate quaerat ullam quia, ea fuga placeat optio quod libero accusamus enim repellendus.
-
-            </p>
+            <h1>SOBRE NOSOTROS</h1>
 
             <p>
-                Ubicaciones de las tiendas: La plata, Berriso, Villa Elisa, City Bell, Los Hornos, Tolosa, Ringuelet.
-            </p>
+                Fundada en 2025 en la ciudad de La Plata, Kazeover es una marca argentina referente en moda oversize,
+                especializada en prendas para mujeres, hombres y niños. Ofrecemos colecciones de temporada, accesorios y
+                calzado, combinando estilo, comodidad y calidad en cada diseño.
+
+                Nuestra propuesta se inspira en un estilo de vida urbano y multifacético, con especial atención a los
+                detalles, sin concesiones en la confección y el diseño. Dirigida por su fundador y director creativo,
+                Lucas Colonio, Kazeover se ha consolidado como una marca que transmite personalidad y versatilidad,
+                adaptándose a las tendencias globales sin perder su identidad local.
+
+                Con presencia en La Plata y Gran Buenos Aires, trabajamos en colaboración con un equipo de profesionales
+                y creativos comprometidos con la innovación y la excelencia. Cada colección refleja nuestro objetivo:
+                brindar moda oversize de calidad que permita a cada persona expresarse libremente.
+
+                Sucursales: La Plata, Berisso, Villa Elisa, City Bell, Los Hornos, Tolosa, Ranelagh y otras localidades
+                del Gran Buenos Aires.
+
+
+    
         </div>
         </p>
 
-        <div class="d-flex  gap-2">
+        <div class="d-flex gap-2 justify-content-center align-items-center">
             <div><img class="img-sobrenosotros" src="../img/tiendakazeover.png" alt="tiendanegocio"></div>
             <div><img class="img-sobrenosotros" src="../img/remeraoversize-kazeocer.png" alt="remeraoversize"></div>
         </div>
