--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -268,8 +268,8 @@
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Gift Card </li>
-                    <li>Productos</li>
-                    <li>Sobre nosotros</li>
+                    <li><a class="text-reset text-decoration-none" href="../index.html">Productos</a></li>
+                     <li><a class="text-reset text-decoration-none" href="./sobrenosotros.html">Sobre nosotros</a></li>
                 </ul>
             </div>
         </div>
@@ -279,16 +279,16 @@
                 <div class="d-flex row ">
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="https://www.facebook.com/profile.php?id=61570911674543" target="_blank" rel="noopener"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
+                            <li> <a href="https://www.instagram.com/kazeover/" target="_blank" rel="noopener"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube" ></a></li>
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
                         
                     </div>
                     
                     <ul class="d-flex">
-                        <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
+                        <li>Copyright © . 2025 Todos los derechos reservados.</li>
                     </ul>
 
                 </div>
