--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <img src="./img/fondo-index-background.jpg" class="img-desktop" alt="Remera grande" />
         </div>
 
+<!-- CAROUSEL MOBILE -->
         <div id="carouselExampleIndicators" class="carousel slide m-0 p-0 carousel-index">
             <div class="carousel-indicators ">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -78,18 +79,20 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
+
             <div class="carousel-inner mt-5">
                 <div class="carousel-item active">
-                    <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index"
+                    <a href="# "><img src="./img/carrusel1index.jpg" class="carrusel-img-index"
                             alt="Remera-oversize-blessed"> </a>
                 </div>
                 <div class="carousel-item">
-                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index"
+                    <a href="#"><img src="./img/carrusel2index.jpg" class="carrusel-img-index"
                             alt="remeraoversize-wise"></a>
-
                 </div>
+                
                 <div class="carousel-item">
-                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="remeraoversize-tokyo">
+                      <a href="#"><img src="./img/carussel3index.jpg" class="carrusel-img-index"
+                            alt="remeraoverize-tokio"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -176,8 +179,8 @@
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Gift Card </li>
-                    <li>Productos</li>
-                    <li>Sobre nosotros</li>
+                    <li><a class="text-reset text-decoration-none" href="./index.html">Productos</a></li>
+                    <li><a class="text-reset text-decoration-none" href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
                 </ul>
             </div>
         </div>
@@ -188,16 +191,16 @@
 
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="./img/logo faceboock.png" alt="Faceboock"></a></li>
-                            <li> <a href="#"><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href="#"><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="https://www.facebook.com/profile.php?id=61570911674543" target="_blank" rel="noopener"><img src="./img/logo faceboock.png" alt="Faceboock"></a></li>
+                            <li> <a href="https://www.instagram.com/kazeover/" target="_blank" rel="noopener"><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="./img/youtube_social_icon_dark.png" alt="Youtube" ></a></li>
                             <li> <a href="#"><img src="./img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
                     </div>
 
                     <ul class="d-flex">
-                        <li>Copyright © . Todos los derechos reservados.</li>
+                        <li>Copyright © . 2025 Todos los derechos reservados.</li>
                     </ul>
 
                 </div>
