--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -156,8 +156,8 @@
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Gift Card </li>
-                    <li>Productos</li>
-                    <li>Sobre nosotros</li>
+                    <li><a class="text-reset text-decoration-none" href="../index.html">Productos</a></li>
+                     <li><a class="text-reset text-decoration-none" href="./sobrenosotros.html">Sobre nosotros</a></li>
                 </ul>
             </div>
         </div>
@@ -168,15 +168,15 @@
                  
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
-                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube"></a></li>
+                            <li> <a href="https://www.facebook.com/profile.php?id=61570911674543" target="_blank" rel="noopener"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
+                            <li> <a href="https://www.instagram.com/kazeover/" target="_blank" rel="noopener"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube" ></a></li>
                             <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
                     </div>
-                    <ul class="d-flex">
-                        <li>Copyright ©. Todos los derechos reservados.</li>
+                   <ul class="d-flex">
+                        <li>Copyright © . 2025 Todos los derechos reservados.</li>
                     </ul>
 
                 </div>
