--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <meta name="description" content="Ropa oversize de hombre: remeras pesadas, hoodies premium y joggers. Talles XS–4XL. Envíos a toda Argentina y primer cambio sin costo.">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="../css/style.css">
@@ -286,8 +286,8 @@
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Gift Card </li>
-                    <li>Productos</li>
-                    <li>Sobre nosotros</li>
+                    <li><a class="text-reset text-decoration-none" href="../index.html">Productos</a></li>
+                     <li><a class="text-reset text-decoration-none" href="./sobrenosotros.html">Sobre nosotros</a></li>
                 </ul>
             </div>
         </div>
@@ -298,16 +298,16 @@
                  
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="faceboock"></a></li>
-                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="instagram"></a></li>
-                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href="#"><img src="../img/tiktok.png" alt="tiktok"></a></li>
+                          <li> <a href="https://www.facebook.com/profile.php?id=61570911674543" target="_blank" rel="noopener"><img src="../img/logo faceboock.png" alt="Faceboock"></a></li>
+                            <li> <a href="https://www.instagram.com/kazeover/" target="_blank" rel="noopener"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt="Youtube" ></a></li>
+                            <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
                     </div>
 
                     <ul class="d-flex">
-                        <li>Copyright ©. Todos los derechos reservados.</li>
+                        <li>Copyright © . 2025 Todos los derechos reservados.</li>
                     </ul>
                 </div>
             </div>
