--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -83,7 +83,7 @@
         </div>
         </p>
 
-        <div class="d-flex gap-2 justify-content-center align-items-center">
+        <div class="d-flex justify-content-center align-items-center ">
             <div><img class="img-sobrenosotros" src="../img/tiendakazeover.png" alt="tiendanegocio"></div>
             <div><img class="img-sobrenosotros" src="../img/remeraoversize-kazeocer.png" alt="remeraoversize"></div>
         </div>
